<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UserPhotoActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tbPhoto"
        android:background="#039BE5"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:title="@string/nueva_foto"
        app:titleMarginStart="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="412dp"
        android:orientation="horizontal"
        android:layout_marginTop="20sp"
        android:layout_marginLeft="30sp"
        android:layout_marginRight="30sp">

        <ImageView
            android:id="@+id/ivPhoto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:srcCompat="@tools:sample/avatars"
            android:contentDescription="@string/lorem_ipsum" />


    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="350sp"
        android:layout_gravity="center"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/descripcion_photo" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnPhoto"
        android:layout_marginTop="20sp"
        android:layout_width="150sp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/publicar_foto" />



</LinearLayout>